--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/nanso/Desktop/Hycraft/Serveur version/spigot-1.17.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Julien/Downloads/Hycraft/Versions/spigot-1.17.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
